# aureonoise_tilde

./: CMakeLists.txt  README.md
docs/: PROJECT_ANALYSIS.md
source/: aureonoise_attributes.cpp  aureonoise_common.h  aureonoise_tilde.cpp
source/aureo_core/: aureo_binaural.hpp  aureo_config.hpp  aureo_field_adsr.hpp  aureo_math.hpp  aureo_noise.hpp  aureo_pinna.hpp  aureo_ring.hpp  aureo_rng.hpp  aureo_stoch.hpp  aureo_weyl.hpp
source/aureonoise~/: aureonoise_state.hpp  aureonoise_tilde.cpp
